Fix spacing/alignment of logos

--- a/stylesheets/custom.css
+++ b/stylesheets/custom.css
@@ -263,6 +263,7 @@ ul {
 
 .partner-logo {
   display: inline-block;
+  vertical-align: middle;
   padding: 1em;
   width: 10em;
   height: 10em;
@@ -270,6 +271,8 @@ ul {
 
 .psychedelic-press-logo {
   display: inline-block;
+  vertical-align: middle;
+  padding: 1em;
   width: 30em;
   height: 7em;
 }
